# brucore

./: .gitignore  .ocamlformat  DA.ml  DA.mli  brucore.opam  brulib.opam  dune  dune-project
_build/: .db  .digest-db  log
_build/default/: META.brucore  brucore.dune-package  brucore.install  brucore.opam
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: brucore.cma  brucore.cmxa  brucore.cmxs  brucore.ml-gen  gen.ml
_build/default/lib/.brucore.objs/: DA.ml.d  DA.mli.d  brucore__Gen.intf.all-deps  gen.ml.d  gen.mli.d  hashset.ml.d  hashset.mli.d
_build/default/lib/.brucore.objs/byte/: brucore.cmi  brucore.cmo  brucore.cmt  brucore__DA.cmi  brucore__DA.cmo  brucore__DA.cmt  brucore__DA.cmti  brucore__Gen.cmi  brucore__Gen.cmo  brucore__Gen.cmt  brucore__Gen.cmti  brucore__Hashset.cmi  brucore__Hashset.cmo  brucore__Hashset.cmt  brucore__Hashset.cmti
_build/default/lib/.brucore.objs/native/: brucore.cmx  brucore__DA.cmx  brucore__Gen.cmx  brucore__Hashset.cmx
_build/default/lib/.merlin-conf/: lib-brucore
_build/default/test/.brucore.eobjs/byte/: dune__exe__Brucore.cmi  dune__exe__Brucore.cmti
_build/default/test/.brucore.eobjs/native/: dune__exe__Brucore.cmx
_build/default/test/.merlin-conf/: exe-brucore
_build/install/default/lib/brucore/: DA.ml  DA.mli  META  brucore.cma  brucore.cmi  brucore.cmt  brucore.cmx  brucore.cmxa  brucore.cmxs  opam  (+18 more)
lib/: dune  dynarray.ml  dynarray.mli  hashset.ml  hashset.mli
src/: DA.ml  DA.mli  brustream.ml  brustream.mli  dune  gen.ml  gen.mli  hashset.ml  stream.ml  stream.mli
test/: dune
