(lang dune 3.6)

(name brucore)

(generate_opam_files true)

(source
 (github profb/brucore))

(authors "Olivier Brunet")

; (maintainers "Maintainer Name")

; (license LICENSE)

; (documentation https://url/to/documentation)

(package
 (name brucore)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 ; (tags
 ;  (topics "to describe" your project))
 )

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
